// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonHyperlink snapshot should match snapshot 1`] = `
<ButtonHyperlink>
  <FocusRing
    focusRingClass="md-button-hyperlink-focus-ring"
  >
    <button
      className="md-button-hyperlink-wrapper"
      data-disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragStart={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      type="button"
    >
      Hyperlink
    </button>
  </FocusRing>
</ButtonHyperlink>
`;

exports[`ButtonHyperlink snapshot should match snapshot when disabled 1`] = `
<ButtonHyperlink
  disabled={true}
>
  <FocusRing
    focusRingClass="md-button-hyperlink-focus-ring"
  >
    <button
      className="md-button-hyperlink-wrapper"
      data-disabled={true}
      disabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onDragStart={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      type="button"
    >
      Hyperlink
    </button>
  </FocusRing>
</ButtonHyperlink>
`;
